# ProjectoRasterizacion

./: .gitignore  BoundingVolume.h  CMakeLists.txt  Objecto.cpp  Objecto.h  fragment.fs  gly_ply.cpp  gly_ply.h  main.cpp  vertex.vs
include/: Camara.h  filesystem.h  glad.c  glad.h  shader.h  shader_s.h  stb_image.h
resources/models/: bunny.ply  hoop.ply
resources/shaders/: 2.1.basic_lighting.fs  5.1.transform.fs  5.1.transform.vs
